Adding authorithation and confirm registration, changhing registration and making design for main page

--- a/social_network/templates/base.html
+++ b/social_network/templates/base.html
@@ -1,10 +1,19 @@
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/base.css'%}">
+    {% block link %}
+    {% endblock %}
 </head>
 <body>
+    <div class = "hat">
+        <img class = "logo" src="{% static 'images/icons/logo.png'%}" alt="">
+        {% block hat %}
+        {% endblock%}
+    </div>
     {% block content %}
     {% endblock %}
 </body>
