--- a/social_network/main/templates/main/index.html
+++ b/social_network/main/templates/main/index.html
@@ -92,6 +92,7 @@
                         <h3>Дивитись всі</h3>
                     </div>
                 </div>  
+                
                 <div class = "body-frame">
                     <div class = "one-people">
                         <div class = "people-information">
@@ -104,8 +105,20 @@
                             </div>
                         </div>
                     </div>
+                                        <div class = "one-people">
+                        <div class = "people-information">
+                            <div class = "icon">
+                                <img src="{% static 'images/icons/friend-avatar.png'%}" alt="">
+                            </div>
+                            <div class = "people-name-and-subscribers">
+                                <h3 class = "friend-name request-block">Yehor Aung</h3>
+                                <h4 class = "subscribe">4.3к підписників</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            
             
             <div class = "frame message">
                 <div class = "title-frame">
@@ -120,6 +133,20 @@
                     </div>  
                 </div>
                 <div class = "body-frame">
+                    <div class = "one-people">
+                        <div class = "people-information">
+                            <div class = icon>
+                                <img src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                            </div>
+                            <div class = "people-name-and-message">
+                                <div class = "people-name-and-time">
+                                    <h3 class = "friend-name">Mona Lisa</h3>
+                                    <h3 class = "time">09:41</h3>
+                                </div>
+                                <h4 class = message-friend>Привіт! Як справи?</h4>
+                            </div>
+                        </div>
+                    </div>
                     <div class = "one-people">
                         <div class = "people-information">
                             <div class = icon>
@@ -164,54 +191,204 @@
                     </div>
                 </form>
             </div>
-            
-            <div class = "social-media-post">
-                <div class = "people-information-post">
-                    <div class = "avatar-label">
-                        <div class = "people-logo-and-nick">
-                            <div class = "logo-post">
-                                <img class = "post-friend-avatar" src="{% static 'images/icons/avatar-post.png'%}" alt="">
-                                <img class = "online-dot-post" src="{% static 'images/icons/online.png'%}" alt="">
+            <div class = "posts">
+                <div class = "social-media-post">
+                    <div class = "people-information-post">
+                        <div class = "avatar-label">
+                            <div class = "people-logo-and-nick">
+                                <div class = "logo-post">
+                                    <img class = "post-friend-avatar" src="{% static 'images/icons/avatar-post.png'%}" alt="">
+                                </div>
+                                <div class = "nick-post">
+                                    <h2 class = "nick-friend">X_AE_A-13</h2>
+                                </div>
                             </div>
-                            <div class = "nick-post">
-                                <h2 class = "nick-friend">X_AE_A-13</h2>
+                            <div class = "signature">
+                                <img src="" alt="">
                             </div>
                         </div>
-                        <div class = "signature">
-                            <img src="" alt="">
+                        <div class = "dots">
+                            <img class = "dot" src="{% static 'images/icons/Dots.png'%}" alt="">
                         </div>
                     </div>
-                    <div class = "dots">
-                        <img class = "dot" src="{% static 'images/icons/Dots.png'%}" alt="">
+                    <div class = "body-post">
+                        <h3 class = "description-post">Інколи найкращі ідеї народжуються в тиші 🌿<br>
+                                Природа, книга і спокій — усе, що потрібно, аби перезавантажитись. <br>
+                            #відпочинок #натхнення #життя #природа #читання #спокій #гармонія</h3>
+                        <div class = "photos">
+                                <div>
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                        </div>    
+                        <div class = "reviews">
+                            <div class = "review">
+                                <div class = "icon-review">
+                                    <img class = "likes-icon" src="{% static 'images/icons/Like.png'%}" alt="">
+                                </div>
+                                <h2 class = "likes">120 Вподобайок</h2>
+                            </div>
+                            <div class = "review">
+                                <div class = "icon-review">
+                                    <img class = "likes-icon" src="{% static 'images/icons/eye.png'%}" alt="">
+                                </div>
+                                <h2 class = "likes">890 Переглядів</h2>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class = "body-post">
-                    <h3 class = "description-post">Інколи найкращі ідеї народжуються в тиші 🌿<br>
-                            Природа, книга і спокій — усе, що потрібно, аби перезавантажитись. <br>
-                        #відпочинок #натхнення #життя #природа #читання #спокій #гармонія</h3>
-                    <div class = "photos">
-                            <div>
-                                <img src="" alt="">
+                <div class = "social-media-post">
+                    <div class = "people-information-post">
+                        <div class = "avatar-label">
+                            <div class = "people-logo-and-nick">
+                                <div class = "logo-post">
+                                    <img class = "post-friend-avatar" src="{% static 'images/icons/avatar-post.png'%}" alt="">
+                                </div>
+                                <div class = "nick-post">
+                                    <h2 class = "nick-friend">X_AE_A-13</h2>
+                                </div>
+                            </div>
+                            <div class = "signature">
                                 <img src="" alt="">
                             </div>
-                            <div>
-                                <img src="" alt="">
-                                <img src="" alt="">
-                                <img src="" alt="">
-                            </div>
-                    </div>    
-                    <div class = "reviews">
-                        <div class = "review">
-                            <div class = "icon-review">
-                                <img class = "likes-icon" src="{% static 'images/icons/Like.png'%}" alt="">
-                            </div>
-                            <h2 class = "likes">120 Вподобайок</h2>
                         </div>
-                        <div class = "review">
-                            <div class = "icon-review">
-                                <img class = "likes-icon" src="{% static 'images/icons/eye.png'%}" alt="">
+                        <div class = "dots">
+                            <img class = "dot" src="{% static 'images/icons/Dots.png'%}" alt="">
+                        </div>
+                    </div>
+                    <div class = "body-post">
+                        <h3 class = "description-post">Інколи найкращі ідеї народжуються в тиші 🌿<br>
+                                Природа, книга і спокій — усе, що потрібно, аби перезавантажитись. <br>
+                            #відпочинок #натхнення #життя #природа #читання #спокій #гармонія</h3>
+                        <div class = "photos">
+                                <div>
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                        </div>    
+                        <div class = "reviews">
+                            <div class = "review">
+                                <div class = "icon-review">
+                                    <img class = "likes-icon" src="{% static 'images/icons/Like.png'%}" alt="">
+                                </div>
+                                <h2 class = "likes">120 Вподобайок</h2>
                             </div>
-                            <h2 class = "likes">890 Переглядів</h2>
+                            <div class = "review">
+                                <div class = "icon-review">
+                                    <img class = "likes-icon" src="{% static 'images/icons/eye.png'%}" alt="">
+                                </div>
+                                <h2 class = "likes">890 Переглядів</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class = "social-media-post">
+                    <div class = "people-information-post">
+                        <div class = "avatar-label">
+                            <div class = "people-logo-and-nick">
+                                <div class = "logo-post">
+                                    <img class = "post-friend-avatar" src="{% static 'images/icons/avatar-post.png'%}" alt="">
+                                </div>
+                                <div class = "nick-post">
+                                    <h2 class = "nick-friend">X_AE_A-13</h2>
+                                </div>
+                            </div>
+                            <div class = "signature">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                        <div class = "dots">
+                            <img class = "dot" src="{% static 'images/icons/Dots.png'%}" alt="">
+                        </div>
+                    </div>
+                    <div class = "body-post">
+                        <h3 class = "description-post">Інколи найкращі ідеї народжуються в тиші 🌿<br>
+                                Природа, книга і спокій — усе, що потрібно, аби перезавантажитись. <br>
+                            #відпочинок #натхнення #життя #природа #читання #спокій #гармонія</h3>
+                        <div class = "photos">
+                                <div>
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                        </div>    
+                        <div class = "reviews">
+                            <div class = "review">
+                                <div class = "icon-review">
+                                    <img class = "likes-icon" src="{% static 'images/icons/Like.png'%}" alt="">
+                                </div>
+                                <h2 class = "likes">120 Вподобайок</h2>
+                            </div>
+                            <div class = "review">
+                                <div class = "icon-review">
+                                    <img class = "likes-icon" src="{% static 'images/icons/eye.png'%}" alt="">
+                                </div>
+                                <h2 class = "likes">890 Переглядів</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class = "social-media-post">
+                    <div class = "people-information-post">
+                        <div class = "avatar-label">
+                            <div class = "people-logo-and-nick">
+                                <div class = "logo-post">
+                                    <img class = "post-friend-avatar" src="{% static 'images/icons/avatar-post.png'%}" alt="">
+                                </div>
+                                <div class = "nick-post">
+                                    <h2 class = "nick-friend">X_AE_A-13</h2>
+                                </div>
+                            </div>
+                            <div class = "signature">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                        <div class = "dots">
+                            <img class = "dot" src="{% static 'images/icons/Dots.png'%}" alt="">
+                        </div>
+                    </div>
+                    <div class = "body-post">
+                        <h3 class = "description-post">Інколи найкращі ідеї народжуються в тиші 🌿<br>
+                                Природа, книга і спокій — усе, що потрібно, аби перезавантажитись. <br>
+                            #відпочинок #натхнення #життя #природа #читання #спокій #гармонія</h3>
+                        <div class = "photos">
+                                <div>
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                        </div>    
+                        <div class = "reviews">
+                            <div class = "review">
+                                <div class = "icon-review">
+                                    <img class = "likes-icon" src="{% static 'images/icons/Like.png'%}" alt="">
+                                </div>
+                                <h2 class = "likes">120 Вподобайок</h2>
+                            </div>
+                            <div class = "review">
+                                <div class = "icon-review">
+                                    <img class = "likes-icon" src="{% static 'images/icons/eye.png'%}" alt="">
+                                </div>
+                                <h2 class = "likes">890 Переглядів</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
