--- a/social_network/registration/templates/registration/index.html
+++ b/social_network/registration/templates/registration/index.html
@@ -1,14 +1,32 @@
 {% extends "base.html" %}
+{% load static%}
 
 {% block title %}
      Реєстрація 
 {% endblock %}
 
+{% block link %}
+    <link rel="stylesheet" href="{% static 'registration/css/style.css' %}">
+{% endblock %}
+
 {% block content %} 
-    <h1>Реєстрація</h1>
-    <form method = "post">
-        {% csrf_token%}
-        {{form.as_p}}
-        <button type = "submit">Надіслати</button>
-    </form>
+    <div class = "body">
+        <div class = "registration-frame">
+            <div class = "reg-or-log-frame">
+                <h1 class = "registration-title">Реєстрація</h1>
+                <h1 class = "authorithation-title">Авторизація</h1>
+            </div>
+            <h2>Приєднуйся до WorldIT</h2>
+            <form method = "post">
+                <div class = "registration-form">
+                    {% csrf_token%}
+                    {{form.as_p}}
+                </div>
+                <button type = "submit">Надіслати</button>
+            </form>
+        </div>
+        <div class = "background-image">
+            <img src="{% static 'registration/images/background/back.png' %}" alt="">
+        </div>
+    </div>
 {% endblock %}
