--- a/social_network/registration/templates/registration/index.html
+++ b/social_network/registration/templates/registration/index.html
@@ -16,7 +16,7 @@
                 <h1 class = "registration-title">Реєстрація</h1>
                 <h1 class = "authorithation-title">Авторизація</h1>
             </div>
-            <h2>Приєднуйся до WorldIT</h2>
+            <h2 class = "join-worldit">Приєднуйся до WorldIT</h2>
             <form method = "post">
                 <div class = "registration-form">
                     {% csrf_token%}
