--- a/social_network/registration/templates/registration/index.html
+++ b/social_network/registration/templates/registration/index.html
@@ -13,20 +13,29 @@
     <div class = "body">
         <div class = "registration-frame">
             <div class = "reg-or-log-frame">
-                <h1 class = "registration-title">Реєстрація</h1>
-                <h1 class = "authorithation-title">Авторизація</h1>
+                <a href="{% url 'registration'%}" class = "registration-title">Реєстрація</a>
+                <a href = "{% url 'authorithation'%}" class = "authorithation-title">Авторизація</a>
+                <div class = "line"></div>
             </div>
             <h2 class = "join-worldit">Приєднуйся до WorldIT</h2>
             <form method = "post">
                 <div class = "registration-form">
                     {% csrf_token%}
-                    {{form.as_p}}
+                    <div class = "inputs">
+                        {% for field in form %}
+                            <div class = "input">
+                                {{ field.label_tag }}
+                                {{ field }}
+                                {{ field.errors }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <button type = "submit">Створити акаунт</button>
                 </div>
-                <button type = "submit">Надіслати</button>
             </form>
         </div>
         <div class = "background-image">
-            <img src="{% static 'registration/images/background/back.png' %}" alt="">
+            <img class = "image"src="{% static 'images/background/back.png' %}" alt="">
         </div>
     </div>
 {% endblock %}
