--- a/social_network/main/static/css/style.css
+++ b/social_network/main/static/css/style.css
@@ -581,6 +581,7 @@ textarea{
     background-color: rgba(0, 0, 0, 0.5);
     visibility: visible;
 }
+
 .input-form{
     display: flex;
     flex-direction: column;
@@ -588,4 +589,55 @@ textarea{
 }
 a{
     text-decoration: none;
+}
+
+.modal-edit-post{
+    z-index: 1;
+    width: 773px;
+    height: 587px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+    background-color: white;
+    border: 1px black solid;
+    border-radius: 20px;
+    padding: 24px 44px 44px 44px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 24px;
+    padding-bottom: 16px;
+    gap: 16px;
+}
+
+.center-edit{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.center{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dop-form-edit{
+    width: 773px;
+    height: 587px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+    background-color: white;
+    border: 1px black solid;
+    border-radius: 20px;
+    padding: 24px 44px 44px 44px;
 }
